# event-venue-booking

./: .gitignore  DEPLOYMENT_READINESS.md  LINTING_FORMATTING_GUIDE.md  PROJECT_STATUS.md  README.md  TESTING_STRATEGY.md  docker-compose.yml  requirements.txt
event_booking_platform_backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  __init__.py  manage.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  schema.yml
event_booking_platform_backend/bookings/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
event_booking_platform_backend/bookings/migrations/: 0001_initial.py  0002_booking_price_per_ticket_at_booking.py  0003_booking_payment_status_alter_booking_status.py  0004_remove_booking_payment_status.py  0005_booking_payment_intent_id.py  0006_alter_booking_status.py  0007_alter_booking_options_and_more.py
event_booking_platform_backend/bookings/tests/: __init__.py  test_filters.py  (+3 more)
event_booking_platform_backend/core/: admin.py  apps.py  email_utils.py  models.py  permissions.py  serializers.py  signals.py  tests.py  views.py
event_booking_platform_backend/event_booking_platform_backend/: asgi.py  settings.py  urls.py  wsgi.py
event_booking_platform_backend/events/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
event_booking_platform_backend/payments/: admin.py  apps.py  models.py  serializers.py  stripe_utils.py  tests.py  urls.py  views.py
event_booking_platform_backend/venues/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
(+163 files in other folders)
