[tool.poetry]
name = "event-booking-platform-backend"
version = "0.1.0"
description = "Backend for the Event Booking Platform"
authors = ["Your Name <you@example.com>"] # Placeholder author
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "==5.2.1"
djangorestframework = "==3.16.0"
psycopg2-binary = "==2.9.9"
dj-database-url = "==2.1.0"
django-environ = "==0.12.0"
drf-spectacular = "==0.28.0"
django-filter = "==25.1"
gunicorn = "==22.0.0"
django-allauth = "==65.8.1"
dj-rest-auth = "==7.0.1"
django-redis = "==5.4.0"
stripe = "==9.10.0"
whitenoise = "==6.6.0"
python-dateutil = "==2.9.0.post0"
requests = "==2.32.3" # Corrected version
PyYAML = "==6.0.2"
sqlparse = "==0.5.3"
asgiref = "==3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "==8.3.5"
pytest-django = "==4.11.1"
pytest-cov = "==6.1.1"
Faker = "==12.0.1"
mixer = "==7.2.2"
flake8 = "^6.0" # Added flake8
black = "^24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "event_booking_platform_backend.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 119
target-version = ['py310']
